force-app/main/default/objects/BliingContact__c/BliingContact__c.object-meta.xml
<CustomObject>
    <label>請求先担当</label>
    <nameField>
        <displayFormat>BC-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>請求先担当者番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>