force-app/main/default/objects/BliingContact__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>請求先担当</relationshipLabel>
    <relationshipName>BliingContacts</relationshipName>
    <type>Lookup</type>
</CustomField>