force-app/main/default/objects/BliingContact__c/fields/BillingContactID18__c.field-meta.xml
<CustomField>
    <fullName>BillingContactID18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>請求先担当ID(18桁)</label>
    <type>Text</type>
</CustomField>