force-app/main/default/objects/BliingContact__c/fields/MailAddless__c.field-meta.xml
<CustomField>
    <fullName>MailAddless__c</fullName>
    <label>メール</label>
    <type>Email</type>
</CustomField>