force-app/main/default/objects/BliingContact__c/fields/MailingCity__c.field-meta.xml
<CustomField>
    <fullName>MailingCity__c</fullName>
    <label>市区郡</label>
    <length>255</length>
    <type>Text</type>
</CustomField>