force-app/main/default/objects/BliingContact__c/fields/MailingState__c.field-meta.xml
<CustomField>
    <fullName>MailingState__c</fullName>
    <label>都道府県</label>
    <length>5</length>
    <type>Text</type>
</CustomField>