force-app/main/default/objects/BliingContact__c/fields/Primarily__c.field-meta.xml
<CustomField>
    <fullName>Primarily__c</fullName>
    <defaultValue>false</defaultValue>
    <label>主担当</label>
    <type>Checkbox</type>
</CustomField>